Fix #1182 (missing size for expand-icon, so it was invisible).

--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -907,8 +907,12 @@ span.tab_next_inactive a {
     float: left;
     background-image: url(../../img/jquery-ui/ui-icons_222222_256x240.png);
     background-position: -64px -16px;
+    white-space: nowrap;
 }
 .expanded {
+    height: 16px;
+    width: 16px;
+    float: left;
     background-image: url(../../img/jquery-ui/ui-icons_222222_256x240.png);
     background-position: -32px -16px;
     white-space: nowrap;
